<resources>
    <string name="app_name">AgesTogether</string>
    <string name="title_home">Usuarios</string>
    <string name="title_dashboard">Servicios</string>
    <string name="title_notifications">Localizaciones</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="username_empty">Es necesario el usuario</string>
    <string name="password_empty">Es necesaria la contraseña</string>
    <string name="error_in_the_connection">Error en la conexión</string>
    <string name="hint_email">Correo electronico</string>
    <string name="hint_confirm_password">Repita la contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_phone">Número de teléfono</string>
    <string name="btn_birth_date">Fecha de nacimiento</string>
    <string name="txt_type_user_register">Seleccione que tipo de usuario es:</string>
    <string name="searching_compani">Busca compañia</string>
    <string name="offer_occupation">Ofrece alojamiento</string>
    <string name="offer_compani">Joven que ofrece compañía</string>
    <string name="offer_service">Ofrece servicio</string>
    <string name="age">Edad:</string>
    <string name="menu_user_profile">Perfil de usuario</string>
    <string name="menu_log_out">Cerrar Sesión</string>
    <string name="action_add_favorite">Añadir a favoritos</string>
    <string name="birth_date">Fecha de nacimiento:</string>
    <string name="message">Mensaje:</string>
    <string name="choose_email_client">Seleccione el cliente para enviar el email:</string>
    <string name="action_change_password">Cambiar contraseña</string>
    <string name="action_delete_avatar">Eliminar avatar</string>
    <string name="btn_change_type">Cambiar tipo de usuario</string>
    <string name="btn_edit_profile">Editar perfil</string>
    <string name="photo_needed">Seleccione una foto</string>
    <string name="avatar_update">Foto de perfil actualizada correctamente</string>
    <string name="update">Actualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="password_needed">Contraseña necesaria</string>
    <string name="confirm_password_needed">Repita su contraseña</string>
    <string name="correct_update">Se ha editado correctamente</string>
    <string name="error_in_update">Error al actualizar</string>
    <string name="change_password_title">Cambiar contraseña</string>
    <string name="change_password_body">Indique la nueva contraseña</string>
    <string name="avatar_deleted">Avatar eliminado</string>
    <string name="action_delete_me">Darse de baja</string>
    <string name="confirm">Confirmar</string>
    <string name="delete_me_title">¿Darse de baja?</string>
    <string name="delete_me_body">Si te das de baja perderas todos tus datos</string>
    <string name="btn_confirm_edit_user_profile">Editar perfil</string>
    <string name="action_searching_compani_users">Ver usuarios buscando compañía</string>
    <string name="action_ofers_accomodation_users">Ver usuarios ofreciendo alojamiento</string>
    <string name="action_young_users">Ver usuarios ofreciendo compañía</string>
    <string name="action_offers_service_users">Ver usuarios ofreciendo servicio</string>
    <string name="action_all_users">Ver todos los usuarios</string>
    <string name="action_search">Buscar</string>
    <string name="added_to_favorites">Añadido a favoritos</string>
    <string name="action_add_living_with">Añadir como conviviendo</string>
    <string name="living_with_updated">Usuario marcado como conviviendo</string>
    <string name="living_with_deleted">Convivencia eliminada</string>
    <string name="actually_not_living_with">Actualmente no convives con nadie</string>
    <string name="action_delete_living_with">Eliminar convivencia</string>
    <string name="action_go_favorites">Ver usuarios favoritos</string>
    <string name="favorite_deleted">ELiminado de favoritos</string>
    <string name="action_add_service">Añadir servicio</string>
    <string name="action_my_services">Ver mis servicios</string>
    <string name="action_all_services">Ver todos los servicios</string>
    <string name="new_service_title">Crear nuevo servicio</string>
    <string name="new_service_body">Indica los datos del servicio</string>
    <string name="create">Crear</string>
    <string name="hint_title">Nombre/Titulo</string>
    <string name="hint_description">Descripción</string>
    <string name="txt_select_type_service">Selecciona de que tipo es el servicio:</string>
    <string name="do_buyout">Hacer compra</string>
    <string name="transport">Transporte</string>
    <string name="cook">Cocinar</string>
    <string name="repair">Reparaciones</string>
    <string name="title_needed">Titulo necesario</string>
    <string name="description_needed">Descripcion necesaria</string>
    <string name="create_correct">Se ha creado correctamente</string>
    <string name="error_in_create">Error al crear</string>
    <string name="txt_user_offering_service">Usuario ofreciendo el servicio:</string>
    <string name="not_service_properati">No puedes borrar este servicio</string>
    <string name="action_delete_service">Eliminar servicio</string>
    <string name="service_deleted">Servicio eliminado</string>
    <string name="action_update_service">Editar Servicio</string>
    <string name="edit_service_title">Editar Servicio</string>
    <string name="edit_service_body">Indique los nuevos datos del servicio</string>
    <string name="action_my_location">Ver tu localización ofrecida</string>
    <string name="action_view_all_locations">Ver todas las localizaciones</string>
    <string name="txt_see_location">Ver localización</string>
    <string name="txt_user_offering_location">Ver usuario ofreiendo localización</string>
    <string name="action_delete_location">Eliminar localización ofrecida</string>
    <string name="action_edit_location">Editar localización ofrecida</string>
    <string name="action_add_location">Añadir mi localización ofrecida</string>
    <string name="hint_country">País</string>
    <string name="hint_iso_code">Código iso</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_street">Calle</string>
    <string name="hint_postal_code">Código postal</string>
    <string name="country_needed">Pais necesario</string>
    <string name="iso_code_needed">Código iso necesario</string>
    <string name="city_needed">Ciudad necesaria</string>
    <string name="street_needed">Calle necesaria</string>
    <string name="postal_code_needed">Código postal necesario</string>
    <string name="new_location_title">Añadir localización</string>
    <string name="new_location_body">Indica los datos de tu localización ofrecida</string>
    <string name="edit_location_title">Editar localización</string>
    <string name="edit_location_body">Indique los nuevos datos de la localización ofrecida</string>
    <string name="location_deleted">Localización eliminada</string>
    <string name="new_user_google_login">Contraseña por defecto: 12345678, vaya a su perfil y edite los campos de su usuario que vea combenientes</string>
    <string name="new_user_google_register">Registro con google completado, espera a que un admin te valide el usuario para poder acceder</string>
    <string name="login_token_expired">Vuelva a iniciar sesión</string>
    <string name="action_go_living_with">Ver con quien convivo</string>
</resources>
