<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_change_password"
        android:icon="@drawable/ic_lock_outline_white_24dp"
        android:title="@string/action_change_password"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_go_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/action_go_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_avatar"
        android:title="@string/action_delete_avatar" />
    <item
        android:id="@+id/action_delete_living_with_profile"
        android:title="@string/action_delete_living_with" />
    <item
        android:id="@+id/action_delete_me"
        android:title="@string/action_delete_me" />
</menu>