<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/editTextTitleNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDescriptionNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewSelectTypeServiceNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_select_type_service"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerNewService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>